K8S/sqlserver-universidad-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misqlserver
  template:
    metadata:
      labels:
        app: misqlserver
    spec:
      containers:
        - name: misqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: miservidorsqlserver
      volumes:
      - name: miservidorsqlserver
        persistentVolumeClaim:
          claimName: sqlserver-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: misqlserver
  ports:
    - name: misqlserver
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: misqlserver
  ports:
  - protocol: TCP
    port: 1433
